# MotorDrivePico

./: CMakeLists.txt  PicoLink.code-workspace  StartDev.bat
MotorDrive/: config.h  main.cpp  motor.cpp  motor.h
PicoLink/: main.c  port.h
lib/Components/: CMakeLists.txt  DRV8876.cpp  DRV8876.h  MAX11645.cpp  MAX11645.h  MCP47A1.cpp  MCP47A1.h  components.cpp  components.h
lib/Console/: CMakeLists.txt  console.cpp  console.h
lib/FatFs/: CMakeLists.txt  diskio.c  ff.c  ffconf.h
lib/Interface/: CMakeLists.txt  interface.c  interface.h
lib/Register/: CMakeLists.txt  register.cpp  register.h
lib/Shell/: CMakeLists.txt  shell.cpp  shell.h
lib/Storage/: CMakeLists.txt  storage.c  storage.h
lib/ymodem/: CMakeLists.txt  ymodem.c  ymodem.h
ports/RP2040/: CMakeLists.txt  port.c
ports/RP2040/FatFs/: diskio.c
ports/RP2040/boards/Adafruit_Feather_RP2040/: config.h
